z-index fix

--- a/src/Microweber/includes/css/mw.ui.css
+++ b/src/Microweber/includes/css/mw.ui.css
@@ -775,7 +775,7 @@ input.mw-ui-field{
 
 .mw_modal{
   position: fixed;
-  z-index: 1001;
+  z-index: 1102;
   top:0;
   left: 0;
   display: none;
@@ -884,7 +884,7 @@ input.mw-ui-field{
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1000;
+  z-index: 1101;
   width: 100%;
   height: 100%;
   background: black;
